:bug: [upstream] admin - remove content truncate #560

--- a/decidim-admin/app/assets/stylesheets/decidim/admin/modules/_table-list.scss
+++ b/decidim-admin/app/assets/stylesheets/decidim/admin/modules/_table-list.scss
@@ -106,3 +106,11 @@
 .table-list__state{
   text-align: center;
 }
+
+.reportable-type{
+  vertical-align: top;
+}
+
+.reportable-content{
+  max-width: 35rem;
+}
